kuberentes/kubernetes-documents/Network & Security/calico/networkpolicy/calico-global-networkpolicy.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-tcp-port-6379
