kuberentes/kubernetes-documents/Network & Security/calico/networkpolicy/calico-namespace.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-tcp-6379
  namespace: production
