kuberentes/kubernetes-documents/Network & Security/calico/networkpolicy/pod-block.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
  namespace: wsi
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
    - Ingress
    - Egress
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-external
  namespace: wsi
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 10.1.0.0/16 # VPC Cidr을 범위로 잡습니다. 
      ports:
        - protocol: TCP
          port: 8080 # 현재 워크로드인 포트번호를 적습니다.
